--- a/Đồ án/css.css
+++ b/Đồ án/css.css
@@ -33,8 +33,11 @@ header{
     display: flex;
     gap:100px;
 }
-.logo{
-    margin-left: 135px;
+
+.logo1{
+    height: 140px;
+    width: 140px;
+    margin-left: 95px;
 }
 .search{
     display: flex;
@@ -70,8 +73,12 @@ body{
     
 }
 main{
-    padding: 5px;
+    /* ko sai dc sticky phai them*/
+    top: 0;
+    position:-webkit-sticky;
+    position: sticky;
 }
+
 .nd{
     margin-top: 20px;
     display: flex;
@@ -79,6 +86,12 @@ main{
     justify-content: center;
     width: 100%;
     gap:18px;
+}
+.font{
+    color:#898989;
+}
+.font-bold{
+    font-weight: bold;
 }
 .tab{
     display:flex;
@@ -90,6 +103,117 @@ main{
     background-color: var(--primary-color);
     color: #F1F1F1;
 }
+/*SUBMENU*/
+ .tab:hover .sub-menu{
+    display: block;
+
+}
+.sub-menu{
+    width: 180px;
+    background-color:#F1F1F1;
+    position: absolute;
+    display: none;
+    left: 257px;
+    top:32px;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* giữ nguyên chìu dài chìu rộng*/
+    box-sizing: border-box;
+    text-align: center;
+   
+}
+/*tắt gạch chân*/
+.sub-menu li a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+
+}
+/* trỏ từ cha xuống con*/
+ li{
+    padding-top:15px;
+    padding-bottom: 15px;
+} 
+li:hover{
+    
+    background-color: var(--primary-color);
+} 
+/* trỏ hover chữ trắng*/
+li:hover  a{
+    color: white;
+}
+/*SUBMENU1*/
+.tab:hover .sub-menu1{
+    display: block;
+
+}
+.sub-menu1{
+    width: 180px;
+    background-color:#F1F1F1;
+    position: absolute;
+    display: none;
+    left: 333px;
+    top:32px;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* giữ nguyên chìu dài chìu rộng*/
+    box-sizing: border-box;
+    text-align: center;
+   
+}
+/*tắt gạch chân*/
+.sub-menu1 li a{
+    text-decoration: none;
+}
+
+li:hover{
+    
+    background-color: var(--primary-color);
+} 
+/* trỏ hover chữ trắng*/
+li:hover  a{
+    color: white;
+}
+/*SUBMENU2*/
+.tab:hover .sub-menu2{
+    display: block;
+
+}
+.sub-menu2{
+    width: 180px;
+    background-color:#F1F1F1;
+    position: absolute;
+    display: none;
+    left: 632px;
+    top:32px;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* giữ nguyên chìu dài chìu rộng*/
+    box-sizing: border-box;
+    text-align: center;
+   
+}
+/*tắt gạch chân*/
+.sub-menu2 li a{
+    text-decoration: none;
+}
+
+li:hover{
+    
+    background-color: var(--primary-color);
+} 
+/* trỏ hover chữ trắng*/
+li:hover  a{
+    color: white;
+}
+
+
+
+
 .imageChange{
     width:300px;
     height:100px;
@@ -207,6 +331,7 @@ main{
 }
 .hoverk1:hover{
     color: var(--primary-color);
+
 }
 /* tro chuot*/ 
 .hoverk1{
